# slam_auto_calibrator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
Maps/: MapMetricVariables.txt  gmapping_Trial_0_RobotsQty_3_Map_2023_09_21-07_48_31_PM.yaml  gmapping_Trial_0_RobotsQty_3_Map_2023_09_21-08_55_12_PM.yaml  gmapping_Trial_1_RobotsQty_3_Map_2023_09_21-07_55_23_PM.yaml  gmapping_Trial_1_RobotsQty_3_Map_2023_09_21-09_01_29_PM.yaml
launch/: APE_launcher.launch  ape_launcher.launch  multi_robot_in_world.launch  single_robot_in_world.launch  single_robot_slam_auto_calibrator.launch  single_robot_slam_launcher.launch  slam_auto_calibrator.launch  slam_launcher.launch
msg/: APE.msg
src/: MapAccuracy.py  MapMetricVariables.txt  ParamsGenerator.py  PoseAccuracy.py  calibrator.py  map_accuracy.py  robot_APE_Publisher.py  robot_ape_publisher.py  slam_auto_calibrator.py  slam_automated_calibrator.py
