<?xml version="1.0"?>
<package format="2">
  <name>slam_auto_calibrator</name>
  <version>0.0.0</version>
  <description>The slam_auto_calibrator package uses Artificial Intelligence to calibrate a multi-robot SLAM algorithm</description>

  <maintainer email="kevin.trejosvargas@ucr.ac.cr">Kevin Trejos Vargas</maintainer>

  <license>MIT</license>

  <author email="kevin.trejosvargas@ucr.ac.cr">Kevin Trejos Vargas</author>


  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
